# fritz-jingle-maschine

./: .gitignore  Cargo.toml  README.md
fritz-jingle-db/: Cargo.toml
fritz-jingle-db/src/: jingle.rs  lib.rs
fritz-jingle-downloader/: Cargo.toml
fritz-jingle-downloader/src/: cli.rs  downloader.rs  main.rs
fritz-jingle-maschine/: Cargo.toml
fritz-jingle-maschine/src/: cli.rs  main.rs  maschine.rs
fritz-jingle-maschine/src/maschine/: jingle_player.rs
fritz_jingle_db/: Cargo.toml
fritz_jingle_db/src/: lib.rs
src/: cli.rs  downloader.rs  jingle_player.rs  jingles_db.rs  main.rs
systemd/: jingle-maschine.service
