[package]
name = "fritz_jingle_db"
version = "0.2.0"
authors = ["Beh <b@kayuk.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
eyre = "0.6"