[package]
name = "fritz-jingle-downloader"
version = "0.1.0"
authors = ["Beh <b@kayuk.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
eyre = "0.6"
reqwest = "0.10"
select = "0.5"
futures = "0.3"
tokio = "0.3"