[package]
name = "fritz-jingle-downloader"
version = "0.1.0"
authors = ["Beh <b@kayuk.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
eyre = "0.6"
reqwest = "0.10"
select = "0.5"
indicatif = "0.15.0"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mindtree_utils = "0.4.0"
fritz_jingle_db = { path = "../fritz-jingle-db" }