[package]
name = "fritz-jingle-maschine"
version = "0.1.0"
authors = ["Beh <b@kayuk.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rppal = "0.11"
sysfs_gpio = "0.5"
rodio = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
clap = "3.0.0-beta.2"
eyre = "0.6"
fritz_jingle_db = { path = "../fritz-jingle-db" }